# fastapi-course

./: .gitignore  README.md
day10/: main.py  models.py
day11/: main.py  pyproject.toml
day11/templates/: detail.html  index.html
day12/: README.md  main.py  pyproject.toml
day12/templates/: base.html  create.html  edit.html
day13/: README.md  database.py  main.py  models.py  routes.py  schemas.py
day13/templates/: base.html  create.html  detail.html  edit.html  index.html
day14/: README.md  database.py  main.py  models.py  pyproject.toml  routes.py  schemas.py
day15/: .env  README.md  database.py  main.py  pyproject.toml
day15/routes/: post_route.py  user_route.py
day15/schemas/: post_schema.py  user_schema.py
day16/: README.md  auth.py  main.py  pyproject.toml  security.py
day16/models/: post_model.py  user_model.py
day16/routes/: post_route.py  user_route.py
day16/schemas/: post_schema.py  user_schema.py
day2/: main.py  requirements.txt
day3/: main.py  pyproject.toml
day4/: README.md  main.py
day5/: README.md  main.py  pyproject.toml
day6/: main.py
day7/: README.md  main.py  pyproject.toml
day7/db/: products.py
day7/routes/: category.py  product.py
day8/: README.md  main.py  pydantic_example.py  pyproject.toml
day9/: README.md  examples.txt  index.py  main.py  models.py  pyproject.toml
day9/templates/: home.html
